Safari365 Prod/src/objects/LOC__c.object
<CustomObject>
    <fields>
        <fullName>BUTTON__c</fullName>
        <label>BUTTON</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CODE__c</fullName>
        <externalId>true</externalId>
        <label>CODE</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DST_CODE__c</fullName>
        <label>DST_CODE</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOC_NAME__c</fullName>
        <label>LOC_NAME</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>LOC</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CODE__c</columns>
        <columns>DST_CODE__c</columns>
        <columns>LOC_NAME__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LOC-{0000000}</displayFormat>
        <label>LOC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LOCs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>